--- a/src/styles/custom.less
+++ b/src/styles/custom.less
@@ -150,7 +150,7 @@
 @input-height-small          : 24px;
 
 @input-padding-horizontal    : 7px;
-@input-padding-vertical-base : 4px;
+@input-padding-vertical-base : 3px;
 @input-padding-vertical-small: 1px;
 @input-padding-vertical-large: 6px;
 
